T2/target/generated-sources/antlr4/br/ufscar/dc/compiladores/la/sintatico/LAParser.java
// Generated from br/ufscar/dc/compiladores/la/sintatico/LA.g4 by ANTLR 4.13.1
package br.ufscar.dc.compiladores.la.sintatico;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class LAParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, COMENTARIO=2, COMENTARIO_NAO_FECHADO=3, CADEIA=4, CADEIA_NAO_FECHADA=5, 
		NUM_REAL=6, NUM_INT=7, FIM_ALGORITMO=8, FIM_PROCEDIMENTO=9, FIM_FUNCAO=10, 
		FIM_REGISTRO=11, FIM_ENQUANTO=12, FIM_PARA=13, FIM_CASO=14, FIM_SE=15, 
		PROCEDIMENTO=16, CONSTANTE=17, REGISTRO=18, ENQUANTO=19, DECLARE=20, ESCREVA=21, 
		VERDADEIRO=22, RETORNE=23, LITERAL=24, INTEIRO=25, LOGICO=26, ALGORITMO=27, 
		FUNCAO=28, SENAO=29, ENTAO=30, SEJA=31, CASO=32, PARA=33, FACA=34, TIPO=35, 
		REAL=36, LEIA=37, NAO=38, VAR=39, ATE=40, FALSO=41, SE=42, PONTOS2=43, 
		ATRIB=44, DIFERENTE=45, MENOR_IGUAL=46, MAIOR_IGUAL=47, DOIS_PONTOS=48, 
		PONTO=49, VIRGULA=50, MENOR=51, MAIOR=52, IGUAL=53, MAIS=54, MENOS=55, 
		VEZES=56, DIV=57, MOD=58, CIRCUNFLEXO=59, E_COMERCIAL=60, ABRE_PAR=61, 
		FECHA_PAR=62, ABRE_COL=63, FECHA_COL=64, E_LOGICO=65, OU=66, IDENT=67, 
		SIMBOLO_NAO_IDENTIFICADO=68;
	public static final int
		RULE_programa = 0, RULE_declaracoes_globais = 1, RULE_declaracao_global = 2, 
		RULE_declaracao_tipo = 3, RULE_lista_campos_registro = 4, RULE_declaracao_constante_global = 5, 
		RULE_declaracao_procedimento = 6, RULE_declaracao_funcao = 7, RULE_lista_parametros = 8, 
		RULE_parametro = 9, RULE_lista_ident_dim = 10, RULE_ident_dim = 11, RULE_secao_principal = 12, 
		RULE_corpo = 13, RULE_declaracao_local = 14, RULE_tipo_corpo_tipo = 15, 
		RULE_variavel_decl = 16, RULE_tipo_estendido = 17, RULE_tipo_estendido_simples = 18, 
		RULE_tipo_basico = 19, RULE_valor_constante = 20, RULE_comando = 21, RULE_comando_atribuicao = 22, 
		RULE_lvalue = 23, RULE_comando_leia = 24, RULE_lista_lvalue = 25, RULE_comando_escreva = 26, 
		RULE_lista_expressoes = 27, RULE_comando_chamada = 28, RULE_comando_se = 29, 
		RULE_comando_caso = 30, RULE_item_caso = 31, RULE_selecao_caso = 32, RULE_comando_para = 33, 
		RULE_comando_enquanto = 34, RULE_comando_faca_ate = 35, RULE_expressao = 36, 
		RULE_expr_e = 37, RULE_expr_rel = 38, RULE_expr_arit = 39, RULE_termo = 40, 
		RULE_unario = 41, RULE_fator = 42, RULE_ident = 43;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "declaracoes_globais", "declaracao_global", "declaracao_tipo", 
			"lista_campos_registro", "declaracao_constante_global", "declaracao_procedimento", 
			"declaracao_funcao", "lista_parametros", "parametro", "lista_ident_dim", 
			"ident_dim", "secao_principal", "corpo", "declaracao_local", "tipo_corpo_tipo", 
			"variavel_decl", "tipo_estendido", "tipo_estendido_simples", "tipo_basico", 
			"valor_constante", "comando", "comando_atribuicao", "lvalue", "comando_leia", 
			"lista_lvalue", "comando_escreva", "lista_expressoes", "comando_chamada", 
			"comando_se", "comando_caso", "item_caso", "selecao_caso", "comando_para", 
			"comando_enquanto", "comando_faca_ate", "expressao", "expr_e", "expr_rel", 
			"expr_arit", "termo", "unario", "fator", "ident"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, "'fim_algoritmo'", "'fim_procedimento'", 
			"'fim_funcao'", "'fim_registro'", "'fim_enquanto'", "'fim_para'", "'fim_caso'", 
			"'fim_se'", "'procedimento'", "'constante'", "'registro'", "'enquanto'", 
			"'declare'", "'escreva'", "'verdadeiro'", "'retorne'", "'literal'", "'inteiro'", 
			"'logico'", "'algoritmo'", "'funcao'", "'senao'", "'entao'", "'seja'", 
			"'caso'", "'para'", "'faca'", "'tipo'", "'real'", "'leia'", "'nao'", 
			"'var'", "'ate'", "'falso'", "'se'", "'..'", "'<-'", "'<>'", "'<='", 
			"'>='", "':'", "'.'", "','", "'<'", "'>'", "'='", "'+'", "'-'", "'*'", 
			"'/'", "'%'", "'^'", "'&'", "'('", "')'", "'['", "']'", "'e'", "'ou'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "COMENTARIO", "COMENTARIO_NAO_FECHADO", "CADEIA", "CADEIA_NAO_FECHADA", 
			"NUM_REAL", "NUM_INT", "FIM_ALGORITMO", "FIM_PROCEDIMENTO", "FIM_FUNCAO", 
			"FIM_REGISTRO", "FIM_ENQUANTO", "FIM_PARA", "FIM_CASO", "FIM_SE", "PROCEDIMENTO", 
			"CONSTANTE", "REGISTRO", "ENQUANTO", "DECLARE", "ESCREVA", "VERDADEIRO", 
			"RETORNE", "LITERAL", "INTEIRO", "LOGICO", "ALGORITMO", "FUNCAO", "SENAO", 
			"ENTAO", "SEJA", "CASO", "PARA", "FACA", "TIPO", "REAL", "LEIA", "NAO", 
			"VAR", "ATE", "FALSO", "SE", "PONTOS2", "ATRIB", "DIFERENTE", "MENOR_IGUAL", 
			"MAIOR_IGUAL", "DOIS_PONTOS", "PONTO", "VIRGULA", "MENOR", "MAIOR", "IGUAL", 
			"MAIS", "MENOS", "VEZES", "DIV", "MOD", "CIRCUNFLEXO", "E_COMERCIAL", 
			"ABRE_PAR", "FECHA_PAR", "ABRE_COL", "FECHA_COL", "E_LOGICO", "OU", "IDENT", 
			"SIMBOLO_NAO_IDENTIFICADO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LA.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LAParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public Declaracoes_globaisContext declaracoes_globais() {
			return getRuleContext(Declaracoes_globaisContext.class,0);
		}
		public Secao_principalContext secao_principal() {
			return getRuleContext(Secao_principalContext.class,0);
		}
		public TerminalNode EOF() { return getToken(LAParser.EOF, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			declaracoes_globais();
			setState(89);
			secao_principal();
			setState(90);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Declaracoes_globaisContext extends ParserRuleContext {
		public List<Declaracao_globalContext> declaracao_global() {
			return getRuleContexts(Declaracao_globalContext.class);
		}
		public Declaracao_globalContext declaracao_global(int i) {
			return getRuleContext(Declaracao_globalContext.class,i);
		}
		public Declaracoes_globaisContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracoes_globais; }
	}

	public final Declaracoes_globaisContext declaracoes_globais() throws RecognitionException {
		Declaracoes_globaisContext _localctx = new Declaracoes_globaisContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaracoes_globais);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(92);
					declaracao_global();
					}
					} 
				}
				setState(97);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Declaracao_globalContext extends ParserRuleContext {
		public Declaracao_tipoContext declaracao_tipo() {
			return getRuleContext(Declaracao_tipoContext.class,0);
		}
		public Declaracao_constante_globalContext declaracao_constante_global() {
			return getRuleContext(Declaracao_constante_globalContext.class,0);
		}
		public Declaracao_procedimentoContext declaracao_procedimento() {
			return getRuleContext(Declaracao_procedimentoContext.class,0);
		}
		public Declaracao_funcaoContext declaracao_funcao() {
			return getRuleContext(Declaracao_funcaoContext.class,0);
		}
		public Declaracao_globalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao_global; }
	}

	public final Declaracao_globalContext declaracao_global() throws RecognitionException {
		Declaracao_globalContext _localctx = new Declaracao_globalContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracao_global);
		try {
			setState(102);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TIPO:
				enterOuterAlt(_localctx, 1);
				{
				setState(98);
				declaracao_tipo();
				}
				break;
			case CONSTANTE:
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				declaracao_constante_global();
				}
				break;
			case PROCEDIMENTO:
				enterOuterAlt(_localctx, 3);
				{
				setState(100);
				declaracao_procedimento();
				}
				break;
			case FUNCAO:
				enterOuterAlt(_localctx, 4);
				{
				setState(101);
				declaracao_funcao();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Declaracao_tipoContext extends ParserRuleContext {
		public TerminalNode TIPO() { return getToken(LAParser.TIPO, 0); }
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public TerminalNode DOIS_PONTOS() { return getToken(LAParser.DOIS_PONTOS, 0); }
		public TerminalNode REGISTRO() { return getToken(LAParser.REGISTRO, 0); }
		public Lista_campos_registroContext lista_campos_registro() {
			return getRuleContext(Lista_campos_registroContext.class,0);
		}
		public TerminalNode FIM_REGISTRO() { return getToken(LAParser.FIM_REGISTRO, 0); }
		public Declaracao_tipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao_tipo; }
	}

	public final Declaracao_tipoContext declaracao_tipo() throws RecognitionException {
		Declaracao_tipoContext _localctx = new Declaracao_tipoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaracao_tipo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(TIPO);
			setState(105);
			ident();
			setState(106);
			match(DOIS_PONTOS);
			setState(107);
			match(REGISTRO);
			setState(108);
			lista_campos_registro();
			setState(109);
			match(FIM_REGISTRO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Lista_campos_registroContext extends ParserRuleContext {
		public List<Lista_ident_dimContext> lista_ident_dim() {
			return getRuleContexts(Lista_ident_dimContext.class);
		}
		public Lista_ident_dimContext lista_ident_dim(int i) {
			return getRuleContext(Lista_ident_dimContext.class,i);
		}
		public List<TerminalNode> DOIS_PONTOS() { return getTokens(LAParser.DOIS_PONTOS); }
		public TerminalNode DOIS_PONTOS(int i) {
			return getToken(LAParser.DOIS_PONTOS, i);
		}
		public List<Tipo_estendidoContext> tipo_estendido() {
			return getRuleContexts(Tipo_estendidoContext.class);
		}
		public Tipo_estendidoContext tipo_estendido(int i) {
			return getRuleContext(Tipo_estendidoContext.class,i);
		}
		public Lista_campos_registroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lista_campos_registro; }
	}

	public final Lista_campos_registroContext lista_campos_registro() throws RecognitionException {
		Lista_campos_registroContext _localctx = new Lista_campos_registroContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_lista_campos_registro);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(111);
				lista_ident_dim();
				setState(112);
				match(DOIS_PONTOS);
				setState(113);
				tipo_estendido();
				}
				}
				setState(117); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IDENT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Declaracao_constante_globalContext extends ParserRuleContext {
		public TerminalNode CONSTANTE() { return getToken(LAParser.CONSTANTE, 0); }
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public TerminalNode DOIS_PONTOS() { return getToken(LAParser.DOIS_PONTOS, 0); }
		public Tipo_basicoContext tipo_basico() {
			return getRuleContext(Tipo_basicoContext.class,0);
		}
		public TerminalNode IGUAL() { return getToken(LAParser.IGUAL, 0); }
		public Valor_constanteContext valor_constante() {
			return getRuleContext(Valor_constanteContext.class,0);
		}
		public Declaracao_constante_globalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao_constante_global; }
	}

	public final Declaracao_constante_globalContext declaracao_constante_global() throws RecognitionException {
		Declaracao_constante_globalContext _localctx = new Declaracao_constante_globalContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declaracao_constante_global);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(CONSTANTE);
			setState(120);
			ident();
			setState(121);
			match(DOIS_PONTOS);
			setState(122);
			tipo_basico();
			setState(123);
			match(IGUAL);
			setState(124);
			valor_constante();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Declaracao_procedimentoContext extends ParserRuleContext {
		public TerminalNode PROCEDIMENTO() { return getToken(LAParser.PROCEDIMENTO, 0); }
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public TerminalNode ABRE_PAR() { return getToken(LAParser.ABRE_PAR, 0); }
		public TerminalNode FECHA_PAR() { return getToken(LAParser.FECHA_PAR, 0); }
		public CorpoContext corpo() {
			return getRuleContext(CorpoContext.class,0);
		}
		public TerminalNode FIM_PROCEDIMENTO() { return getToken(LAParser.FIM_PROCEDIMENTO, 0); }
		public Lista_parametrosContext lista_parametros() {
			return getRuleContext(Lista_parametrosContext.class,0);
		}
		public Declaracao_procedimentoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao_procedimento; }
	}

	public final Declaracao_procedimentoContext declaracao_procedimento() throws RecognitionException {
		Declaracao_procedimentoContext _localctx = new Declaracao_procedimentoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declaracao_procedimento);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(PROCEDIMENTO);
			setState(127);
			ident();
			setState(128);
			match(ABRE_PAR);
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR || _la==IDENT) {
				{
				setState(129);
				lista_parametros();
				}
			}

			setState(132);
			match(FECHA_PAR);
			setState(133);
			corpo();
			setState(134);
			match(FIM_PROCEDIMENTO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Declaracao_funcaoContext extends ParserRuleContext {
		public TerminalNode FUNCAO() { return getToken(LAParser.FUNCAO, 0); }
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public TerminalNode ABRE_PAR() { return getToken(LAParser.ABRE_PAR, 0); }
		public TerminalNode FECHA_PAR() { return getToken(LAParser.FECHA_PAR, 0); }
		public TerminalNode DOIS_PONTOS() { return getToken(LAParser.DOIS_PONTOS, 0); }
		public Tipo_estendidoContext tipo_estendido() {
			return getRuleContext(Tipo_estendidoContext.class,0);
		}
		public CorpoContext corpo() {
			return getRuleContext(CorpoContext.class,0);
		}
		public TerminalNode FIM_FUNCAO() { return getToken(LAParser.FIM_FUNCAO, 0); }
		public Lista_parametrosContext lista_parametros() {
			return getRuleContext(Lista_parametrosContext.class,0);
		}
		public Declaracao_funcaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao_funcao; }
	}

	public final Declaracao_funcaoContext declaracao_funcao() throws RecognitionException {
		Declaracao_funcaoContext _localctx = new Declaracao_funcaoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_declaracao_funcao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(FUNCAO);
			setState(137);
			ident();
			setState(138);
			match(ABRE_PAR);
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR || _la==IDENT) {
				{
				setState(139);
				lista_parametros();
				}
			}

			setState(142);
			match(FECHA_PAR);
			setState(143);
			match(DOIS_PONTOS);
			setState(144);
			tipo_estendido();
			setState(145);
			corpo();
			setState(146);
			match(FIM_FUNCAO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Lista_parametrosContext extends ParserRuleContext {
		public List<ParametroContext> parametro() {
			return getRuleContexts(ParametroContext.class);
		}
		public ParametroContext parametro(int i) {
			return getRuleContext(ParametroContext.class,i);
		}
		public List<TerminalNode> VIRGULA() { return getTokens(LAParser.VIRGULA); }
		public TerminalNode VIRGULA(int i) {
			return getToken(LAParser.VIRGULA, i);
		}
		public Lista_parametrosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lista_parametros; }
	}

	public final Lista_parametrosContext lista_parametros() throws RecognitionException {
		Lista_parametrosContext _localctx = new Lista_parametrosContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_lista_parametros);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			parametro();
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VIRGULA) {
				{
				{
				setState(149);
				match(VIRGULA);
				setState(150);
				parametro();
				}
				}
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametroContext extends ParserRuleContext {
		public Lista_ident_dimContext lista_ident_dim() {
			return getRuleContext(Lista_ident_dimContext.class,0);
		}
		public TerminalNode DOIS_PONTOS() { return getToken(LAParser.DOIS_PONTOS, 0); }
		public Tipo_estendidoContext tipo_estendido() {
			return getRuleContext(Tipo_estendidoContext.class,0);
		}
		public TerminalNode VAR() { return getToken(LAParser.VAR, 0); }
		public ParametroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametro; }
	}

	public final ParametroContext parametro() throws RecognitionException {
		ParametroContext _localctx = new ParametroContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_parametro);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(156);
				match(VAR);
				}
			}

			setState(159);
			lista_ident_dim();
			setState(160);
			match(DOIS_PONTOS);
			setState(161);
			tipo_estendido();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Lista_ident_dimContext extends ParserRuleContext {
		public List<Ident_dimContext> ident_dim() {
			return getRuleContexts(Ident_dimContext.class);
		}
		public Ident_dimContext ident_dim(int i) {
			return getRuleContext(Ident_dimContext.class,i);
		}
		public List<TerminalNode> VIRGULA() { return getTokens(LAParser.VIRGULA); }
		public TerminalNode VIRGULA(int i) {
			return getToken(LAParser.VIRGULA, i);
		}
		public Lista_ident_dimContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lista_ident_dim; }
	}
